# lily

./: .coveragerc  .gitignore  .gitmodules  DOCS.md  Makefile  README.md  env.sh  index.html  pyproject.toml  pytest.ini  pytest.sh  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: test-publish.yml
.lily/: API.md  config.json  examples.json  lily.makefile  lily_assistant.makefile
.lily/commands/: 1.0.71.json  1.0.72.json  1.0.75.json  1.0.76.json  1.0.77.json  1.0.78.json  1.1.0.json  1.1.1.json  1.1.10.json  1.1.11.json  1.1.12.json  1.1.13.json  1.1.14.json  1.1.15.json  1.1.16.json  1.1.17.json  1.1.18.json  1.1.19.json  1.1.2.json  1.1.20.json  1.1.21.json  1.1.22.json  1.1.23.json  1.1.24.json  1.1.25.json  1.1.26.json  1.1.27.json  1.1.28.json  1.1.29.json  1.1.3.json  1.1.30.json  1.1.31.json  1.1.4.json  1.1.5.json  1.1.7.json  1.1.8.json  1.1.9.json  1.2.0.json  1.2.1.json  1.2.10.json  (+56 more)
.lily/migrations/: 1.1.25.json
assets/: draft_lily_commands.ora
docs/: dom.js  index.html  main.js  qs.js  state.js  style.css
lily/: __init__.py  manage.py
lily/.commands/: api_examples.json  entrypoint.json
lily/async/: __init__.py  backoff.py  backoff_executor.py  lock.py  parallel.py  task.py
lily/asynchronous/: __init__.py  backoff.py  parallel.py  task.py
lily/base/: __init__.py  access.py  apps.py  authorizer.py  command.py  commands.py  conf.py  config.py  context.py  events.py  experimental_serializers.py  input.py  legacy__drf_serializers.py  meta.py  models.py  name.py  output.py  parsers.py  (+8 more)
tests/: __init__.py  factory.py
(+171 files in other folders)
