[tool.poetry]
authors = ["CoSphere Team <contact@cosphere.org>"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
description = "Lily MicroService Framework for Humans"
keywords = ["lily", "microservice", "django", "drf"]
name = "lily"
readme = "README.md"
repository = "https://github.com/cosphere-org/lily"
version = "2.4.0"

[tool.poetry.scripts]
lily = "lily.cli.cli:cli"

[tool.poetry.dependencies]
Django = "^4.0"
PyYAML = "^6.0"
django-bulk-update = "^2.2.0"
django-click = "^2.3.0"
djangorestframework = "^3.13.1"
hunspell = "^0.5.5"
inflect = "^5.3.0"
itsdangerous = "^2.0.1"
jsonschema = "^4.3.1"
langid = "^1.1.6"
lily-assistant = "^1.2.4"
orjson = "^3.6.5"
psycopg2-binary = "^2.9.2"
python = "~3.9.9"
pytz = "^2021.3"
requests = "^2.26.0"
trans = "^2.1.0"

[tool.poetry.dev-dependencies]
django-fake-model = "^0.1.4"
fake-factory = "^0.7.4"
freezegun = "^1.1.0"
httpretty = "^1.1.4"
ipdb = "^0.13.9"
pytest-django = "^4.5.2"
pytest-mock = "^3.6.1"
pytest-pythonpath = "^0.7.3"
pytest-socket = "^0.4.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
